Enhance song fetching and display logic in CurrentSongWidget and related services
- Updated `CurrentSongWidget` to show loading messages when no song is available but the stream is playing.
- Improved `CurrentSongService` to handle API responses more robustly, ensuring all required fields are present before updating the current song.
- Modified `RadioManager` to fetch the current song immediately after starting the stream.
- Enhanced notifications and toast messages in `RadioMenuActivity` and `RadioWheelOverlay` to include current song information when available.
- Added new localization keys for loading states and song information display.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -6,7 +6,8 @@
       "description2": "Klicke auf den Sender und wünsche dir dein Lied. Warte kurz, und es wird gespielt.",
       "noSong": "Kein Song",
       "close": "Schließen",
-      "streamStarted": "Stream gestartet: %s"
+      "streamStarted": "Stream gestartet: %s",
+      "streamStartedWithSong": "Stream gestartet: %s\nAktueller Song: %s"
     },
     "wheel": {
       "noStationsAvailable": "Keine Sender verfügbar",
@@ -15,7 +16,22 @@
     "notification": {
       "streamSelected": {
         "title": "Stream ausgewählt",
-        "text": "Der Stream wurde erfolgreich gestartet."
+        "text": "Der Stream wurde erfolgreich gestartet.",
+        "titleWithStation": "Stream ausgewählt: %s",
+        "textWithSong": "Aktueller Song: %s"
+      }
+    },
+    "widget": {
+      "loading": "Lädt...",
+      "fetchingSongInfo": "Lade Song-Informationen...",
+      "notPlaying": "Wird nicht abgespielt",
+      "clickToRetry": "Zum Wiederholen klicken"
+    },
+    "hudWidget": {
+      "evilraio_full_wdiget": {
+        "showCover": {
+          "name": "Cover anzeigen"
+        }
       }
     },
     "settings": {
