Implement auto-start mode for radio streams with configurable delay
- Added `AutoStartMode` configuration to allow users to choose when the last played stream should automatically start (on game start or server join).
- Introduced a delay feature for auto-start, configurable in seconds.
- Updated `EvilRadioAddon` to handle auto-start logic based on the selected mode and context (game start, server join).
- Enhanced localization files to include new settings for auto-start mode and delay.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -53,7 +53,20 @@
       },
       "autoStartLastStream": {
         "name": "Letzten Stream automatisch starten",
-        "description": "Startet automatisch den zuletzt abgespielten Stream beim Start des Addons"
+        "description": "Aktiviere den automatischen Start des zuletzt abgespielten Streams"
+      },
+      "autoStartMode": {
+        "name": "Auto-Start Modus",
+        "description": "Wähle, wann der Stream automatisch gestartet werden soll",
+        "type": {
+          "disabled": "Deaktiviert",
+          "onGameStart": "Beim Spielstart",
+          "onServerJoin": "Beim Server-Beitritt"
+        }
+      },
+      "autoStartDelay": {
+        "name": "Auto-Start Verzögerung",
+        "description": "Verzögerung in Sekunden vor dem automatischen Start des Streams (0-10 Sekunden)"
       },
       "reloadStreams": {
         "name": "Streams neu laden",
