Refactor auto-start settings for radio streams
- Updated `EvilRadioConfiguration` to encapsulate auto-start settings within a dedicated `AutoStartSubSettings` class, improving organization and clarity.
- Modified `EvilRadioAddon` to utilize the new configuration structure for determining auto-start behavior.
- Enhanced localization files to reflect the new settings structure, including sections for basic, advanced, and action settings.
- Adjusted translation keys for improved consistency and clarity in user interface settings.

--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -35,6 +35,11 @@
       }
     },
     "settings": {
+      "section": {
+        "basic": "Basic Settings",
+        "advanced": "Advanced Settings",
+        "actions": "Actions"
+      },
       "enabled": {
         "name": "Enable Addon",
         "description": "Enable or disable the EvilRadio Addon"
@@ -51,22 +56,22 @@
         "name": "Usage-based Sorting",
         "description": "Sort stations based on usage frequency"
       },
-      "autoStartLastStream": {
-        "name": "Auto-start Last Stream",
-        "description": "Enable automatic start of the last played stream"
-      },
-      "autoStartMode": {
-        "name": "Auto-Start Mode",
-        "description": "Choose when the stream should automatically start",
-        "type": {
-          "disabled": "Disabled",
-          "onGameStart": "On Game Start",
-          "onServerJoin": "On Server Join"
+      "autoStart": {
+        "name": "Auto-Start Settings",
+        "description": "Configure automatic start of the last stream",
+        "mode": {
+          "name": "Auto-Start Mode",
+          "description": "Choose when the stream should automatically start",
+          "type": {
+            "disabled": "Disabled",
+            "onGameStart": "On Game Start",
+            "onServerJoin": "On Server Join"
+          }
+        },
+        "delay": {
+          "name": "Auto-Start Delay",
+          "description": "Delay in seconds before automatically starting the stream (0-10 seconds)"
         }
-      },
-      "autoStartDelay": {
-        "name": "Auto-Start Delay",
-        "description": "Delay in seconds before automatically starting the stream (0-10 seconds)"
       },
       "reloadStreams": {
         "name": "Reload Streams",
