--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -35,6 +35,11 @@
       }
     },
     "settings": {
+      "section": {
+        "basic": "Grundlegende Einstellungen",
+        "advanced": "Erweiterte Einstellungen",
+        "actions": "Aktionen"
+      },
       "enabled": {
         "name": "Addon aktivieren",
         "description": "Aktiviere oder deaktiviere das EvilRadio Addon"
@@ -51,22 +56,22 @@
         "name": "Nutzungsbasierte Sortierung",
         "description": "Sortiere Sender basierend auf der Nutzungshäufigkeit"
       },
-      "autoStartLastStream": {
-        "name": "Letzten Stream automatisch starten",
-        "description": "Aktiviere den automatischen Start des zuletzt abgespielten Streams"
-      },
-      "autoStartMode": {
-        "name": "Auto-Start Modus",
-        "description": "Wähle, wann der Stream automatisch gestartet werden soll",
-        "type": {
-          "disabled": "Deaktiviert",
-          "onGameStart": "Beim Spielstart",
-          "onServerJoin": "Beim Server-Beitritt"
+      "autoStart": {
+        "name": "Auto-Start Einstellungen",
+        "description": "Konfiguriere den automatischen Start des letzten Streams",
+        "mode": {
+          "name": "Auto-Start Modus",
+          "description": "Wähle, wann der Stream automatisch gestartet werden soll",
+          "type": {
+            "disabled": "Deaktiviert",
+            "onGameStart": "Beim Spielstart",
+            "onServerJoin": "Beim Server-Beitritt"
+          }
+        },
+        "delay": {
+          "name": "Auto-Start Verzögerung",
+          "description": "Verzögerung in Sekunden vor dem automatischen Start des Streams (0-10 Sekunden)"
         }
-      },
-      "autoStartDelay": {
-        "name": "Auto-Start Verzögerung",
-        "description": "Verzögerung in Sekunden vor dem automatischen Start des Streams (0-10 Sekunden)"
       },
       "reloadStreams": {
         "name": "Streams neu laden",
