Refactor auto-start functionality and enhance configuration options
- Removed the DISABLED mode from `AutoStartMode` to streamline options.
- Introduced an `enabled` property in `AutoStartSubSettings` to control auto-start activation.
- Updated `EvilRadioAddon` to check the new `enabled` setting before executing auto-start logic on game start and server join events.
- Adjusted volume handling in `RadioMenuActivity` to ensure proper synchronization with configuration settings.
- Enhanced localization files to include new keys for the auto-start feature and updated existing translations for clarity.

--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -35,11 +35,6 @@
       }
     },
     "settings": {
-      "section": {
-        "basic": "Basic Settings",
-        "advanced": "Advanced Settings",
-        "actions": "Actions"
-      },
       "enabled": {
         "name": "Enable Addon",
         "description": "Enable or disable the EvilRadio Addon"
@@ -59,13 +54,16 @@
       "autoStart": {
         "name": "Auto-Start Settings",
         "description": "Configure automatic start of the last stream",
+        "enabled": {
+          "name": "Enable Auto-Start",
+          "description": "Enable automatic start of the last played stream"
+        },
         "mode": {
           "name": "Auto-Start Mode",
           "description": "Choose when the stream should automatically start",
           "type": {
-            "disabled": "Disabled",
             "onGameStart": "On Game Start",
-            "onServerJoin": "On Server Join"
+            "onServerJoin": "On Server/Singleplayer Join"
           }
         },
         "delay": {
@@ -73,15 +71,19 @@
           "description": "Delay in seconds before automatically starting the stream (0-10 seconds)"
         }
       },
+      "usageStatistics": {
+        "name": "Usage Statistics",
+        "description": "Manage usage statistics of streams",
+        "resetStatistics": {
+          "name": "Reset Statistics",
+          "text": "Reset",
+          "description": "Resets the usage statistics of the streams"
+        }
+      },
       "reloadStreams": {
         "name": "Reload Streams",
         "text": "Reload",
         "description": "Reloads the stream list from the server"
-      },
-      "resetStreamUsageCount": {
-        "name": "Reset Usage Statistics",
-        "text": "Reset",
-        "description": "Resets the usage statistics of the streams"
       }
     }
   }
