--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -35,11 +35,6 @@
       }
     },
     "settings": {
-      "section": {
-        "basic": "Grundlegende Einstellungen",
-        "advanced": "Erweiterte Einstellungen",
-        "actions": "Aktionen"
-      },
       "enabled": {
         "name": "Addon aktivieren",
         "description": "Aktiviere oder deaktiviere das EvilRadio Addon"
@@ -53,19 +48,22 @@
         "description": "Die Lautstärke des Radio-Streams (0-100%)"
       },
       "usageBasedSorting": {
-        "name": "Nutzungsbasierte Sortierung",
+        "name": "Nutzerbasierte Sortierung",
         "description": "Sortiere Sender basierend auf der Nutzungshäufigkeit"
       },
       "autoStart": {
         "name": "Auto-Start Einstellungen",
         "description": "Konfiguriere den automatischen Start des letzten Streams",
+        "enabled": {
+          "name": "Auto-Start aktivieren",
+          "description": "Aktiviere den automatischen Start des zuletzt abgespielten Streams"
+        },
         "mode": {
           "name": "Auto-Start Modus",
           "description": "Wähle, wann der Stream automatisch gestartet werden soll",
           "type": {
-            "disabled": "Deaktiviert",
             "onGameStart": "Beim Spielstart",
-            "onServerJoin": "Beim Server-Beitritt"
+            "onServerJoin": "Beim Welt betreten"
           }
         },
         "delay": {
@@ -73,15 +71,19 @@
           "description": "Verzögerung in Sekunden vor dem automatischen Start des Streams (0-10 Sekunden)"
         }
       },
+      "usageStatistics": {
+        "name": "Nutzungsstatistiken",
+        "description": "Verwalte die Nutzungsstatistiken der Streams",
+        "resetStatistics": {
+          "name": "Statistiken zurücksetzen",
+          "text": "zurücksetzen",
+          "description": "Setzt die Nutzungsstatistiken der Streams zurück"
+        }
+      },
       "reloadStreams": {
         "name": "Streams neu laden",
         "text": "neu laden",
         "description": "Lädt die Stream-Liste vom Server neu"
-      },
-      "resetStreamUsageCount": {
-        "name": "Nutzungsstatistiken zurücksetzen",
-        "text": "zurücksetzen",
-        "description": "Setzt die Nutzungsstatistiken der Streams zurück"
       }
     }
   }
