Refactor usage statistics and sorting settings in EvilRadio
- Removed the `usageBasedSorting` property from `EvilRadioConfiguration` and integrated it into the new `UsageStatisticsSubSettings` class for better organization.
- Updated the `EvilRadioAddon` to reflect the changes in the configuration structure.
- Enhanced localization files to update keys and descriptions related to usage statistics and sorting, ensuring clarity in user settings.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -47,10 +47,6 @@
         "name": "Lautstärke",
         "description": "Die Lautstärke des Radio-Streams (0-100%)"
       },
-      "usageBasedSorting": {
-        "name": "Nutzerbasierte Sortierung",
-        "description": "Sortiere Sender basierend auf der Nutzungshäufigkeit"
-      },
       "autoStart": {
         "name": "Auto-Start Einstellungen",
         "description": "Konfiguriere den automatischen Start des letzten Streams",
@@ -72,8 +68,12 @@
         }
       },
       "usageStatistics": {
-        "name": "Nutzungsstatistiken",
-        "description": "Verwalte die Nutzungsstatistiken der Streams",
+        "name": "Nutzerbasierte Sortierung",
+        "description": "Verwalte die Nutzungsstatistiken und Sortierung der Streams",
+        "enabled": {
+          "name": "Nutzerbasierte Sortierung",
+          "description": "Sortiere Sender basierend auf der Nutzungshäufigkeit"
+        },
         "resetStatistics": {
           "name": "Statistiken zurücksetzen",
           "text": "zurücksetzen",
