Add "noStreamSelected" localization key for English and German translations

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -25,6 +25,7 @@
       "loading": "Lädt...",
       "fetchingSongInfo": "Lade Song-Informationen...",
       "notPlaying": "Wird nicht abgespielt",
+      "noStreamSelected": "Kein Sender ausgewählt",
       "clickToRetry": "Zum Wiederholen klicken"
     },
     "hudWidget": {
