--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -25,6 +25,7 @@
       "loading": "Loading...",
       "fetchingSongInfo": "Fetching song info...",
       "notPlaying": "Not playing",
+      "noStreamSelected": "No Stream selected",
       "clickToRetry": "Click to retry"
     },
     "hudWidget": {
