Add song change notifications and refactor icon handling
- Introduced configurable "Song Change Notification" setting.
- Centralized logo icon in `EvilTextures` for consistent use across widgets and notifications.
- Enhanced notification system to display album art and secondary icons.
- Updated translations for new and revised settings.
- Improved current song update workflow in `CurrentSongService`.

--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -25,8 +25,7 @@
       "loading": "Loading...",
       "fetchingSongInfo": "Fetching song info...",
       "notPlaying": "Not playing",
-      "noStreamSelected": "No Stream selected",
-      "clickToRetry": "Click to retry"
+      "noStreamSelected": "No Stream selected"
     },
     "hudWidget": {
       "evilraio_full_wdiget": {
@@ -43,6 +42,10 @@
       "radioMenuKeybind": {
         "name": "Radio Menu Keybind",
         "description": "Key to open the radio menu"
+      },
+      "showSongChangeNotification": {
+        "name": "Song Change Notification",
+        "description": "Get a notification when the song changes"
       },
       "volume": {
         "name": "Volume",
