--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -25,8 +25,7 @@
       "loading": "Lädt...",
       "fetchingSongInfo": "Lade Song-Informationen...",
       "notPlaying": "Wird nicht abgespielt",
-      "noStreamSelected": "Kein Sender ausgewählt",
-      "clickToRetry": "Zum Wiederholen klicken"
+      "noStreamSelected": "Kein Sender ausgewählt"
     },
     "hudWidget": {
       "evilraio_full_wdiget": {
@@ -43,6 +42,10 @@
       "radioMenuKeybind": {
         "name": "Radio-Menü Tastenkürzel",
         "description": "Taste zum Öffnen des Radio-Menüs"
+      },
+      "showSongChangeNotification": {
+        "name": "Song Änderung Benachrichtigung",
+        "description": "Bekomme eine Benachrichtigung beim wechseln des Songs"
       },
       "volume": {
         "name": "Lautstärke",
