Enhance song change notifications in `CurrentSongService`
- Implemented logic to check for song changes before displaying notifications.
- Updated notification system to show alerts only when the song changes, excluding the first load.
- Added new localization keys for song change notifications in English and German.
- Refactored current song update workflow for improved clarity and efficiency.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -19,6 +19,10 @@
         "text": "Der Stream wurde erfolgreich gestartet.",
         "titleWithStation": "Stream ausgewählt: %s",
         "textWithSong": "Aktueller Song: %s"
+      },
+      "songChanged": {
+        "title": "Neuer Song",
+        "text": "%s"
       }
     },
     "widget": {
