Add four lines configuration and update song widget behavior
- Introduced a new configuration option to display the song widget with four lines instead of three.
- Updated `CurrentSongHudWidget` to listen for changes in the four lines setting and trigger updates accordingly.
- Enhanced `CurrentSongWidget` to accommodate the new fourth line, adjusting visibility and layout as needed.
- Added localization keys for the new setting in both English and German.
- Modified the song widget's CSS to support the new four lines layout.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -51,6 +51,10 @@
         "name": "Song Änderung Benachrichtigung",
         "description": "Bekomme eine Benachrichtigung beim wechseln des Songs"
       },
+      "useFourLines": {
+        "name": "4 Zeilen verwenden",
+        "description": "Zeige das Widget mit 4 Zeilen statt 3 an"
+      },
       "volume": {
         "name": "Lautstärke",
         "description": "Die Lautstärke des Radio-Streams (0-100%)"
