--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -51,6 +51,10 @@
         "name": "Song Change Notification",
         "description": "Get a notification when the song changes"
       },
+      "useFourLines": {
+        "name": "Use 4 Lines",
+        "description": "Display the widget with 4 lines instead of 3"
+      },
       "volume": {
         "name": "Volume",
         "description": "The volume of the radio stream (0-100%)"
