Update localization for reload streams feature in German and English
- Modified the "reloadStreams" name and description in both `de_de.json` and `en_us.json` to include a warning indicating it should only be used if there are problems.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -93,9 +93,9 @@
         }
       },
       "reloadStreams": {
-        "name": "Streams neu laden",
+        "name": "Streams neu laden §c(nur bei Problemen)§r",
         "text": "neu laden",
-        "description": "Lädt die Stream-Liste vom Server neu"
+        "description": "Lädt die Stream-Liste vom Server neu. §cNur bei Problemen verwenden.§r"
       }
     }
   }
