Add openFlintMcPage method and localization for addon page access
- Introduced the `openFlintMcPage` method in `EvilRadioConfiguration` to prepare for future access to the addon page on flintmc.net.
- Added corresponding localization entries in both `de_de.json` and `en_us.json` to support the new feature, indicating that the functionality is not yet available.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -96,6 +96,11 @@
         "name": "Streams neu laden §c(nur bei Problemen)§r",
         "text": "neu laden",
         "description": "Lädt die Stream-Liste vom Server neu. §cNur bei Problemen verwenden.§r"
+      },
+      "openFlintMcPage": {
+        "name": "Addon-Seite auf flintmc.net öffnen §c(noch nicht verfügbar)§r",
+        "text": "flintmc.net öffnen",
+        "description": "Öffnet die Addon-Seite auf flintmc.net, wo du Reviews hinterlassen und den Changelog sehen kannst. §cFunktioniert noch nicht, da die Seite noch nicht verfügbar ist.§r"
       }
     }
   }
