--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -96,6 +96,11 @@
         "name": "Reload Streams §c(only if you have problems)§r",
         "text": "Reload",
         "description": "Reloads the stream list from the server. §cOnly use if you have problems.§r"
+      },
+      "openFlintMcPage": {
+        "name": "Open Addon Page on flintmc.net §c(not available yet)§r",
+        "text": "Open flintmc.net",
+        "description": "Opens the addon page on flintmc.net where you can add reviews and see the changelog. §cDoes not work yet, as the page is not available.§r"
       }
     }
   }
