Update branding to "Evil-Radio" in translations and build script

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -41,7 +41,7 @@
     "settings": {
       "enabled": {
         "name": "Addon aktivieren",
-        "description": "Aktiviere oder deaktiviere das EvilRadio Addon"
+        "description": "Aktiviere oder deaktiviere das Evil-Radio Addon"
       },
       "radioMenuKeybind": {
         "name": "Radio-Menü Tastenkürzel",
