--- a/core/src/main/resources/assets/evilradio/i18n/en_us.json
+++ b/core/src/main/resources/assets/evilradio/i18n/en_us.json
@@ -41,7 +41,7 @@
     "settings": {
       "enabled": {
         "name": "Enable Addon",
-        "description": "Enable or disable the EvilRadio Addon"
+        "description": "Enable or disable the Evil-Radio Addon"
       },
       "radioMenuKeybind": {
         "name": "Radio Menu Keybind",
