Refactor `EvilRadioConfiguration` to organize settings into sections and update localization files
- Added new setting sections for "general", "advanced", and "other" in `EvilRadioConfiguration`.
- Updated German and English localization files to include headers for the new setting sections, enhancing user interface clarity.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -39,6 +39,17 @@
       }
     },
     "settings": {
+      "header": {
+        "general": {
+          "name": "Allgemein"
+        },
+        "advanced": {
+          "name": "Erweitert"
+        },
+        "other": {
+          "name": "Sonstiges"
+        }
+      },
       "enabled": {
         "name": "Addon aktivieren",
         "description": "Aktiviere oder deaktiviere das Evil-Radio Addon"
