Update version to 0.1.0-SNAPSHOT and enhance RadioWheelOverlay functionality
- Changed project version in `build.gradle.kts` to 0.1.0-SNAPSHOT.
- Improved `RadioWheelOverlay` to include volume display and play/pause status in the title.
- Added mouse event handling for volume adjustment and play/pause toggling via middle click.
- Updated localization files to support new volume and scroll information messages.
- Enhanced styling for the title component in the radio wheel overlay.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -11,7 +11,9 @@
     },
     "wheel": {
       "noStationsAvailable": "Keine Sender verfügbar",
-      "selectStation": "Wähle einen Evil-Radio Sender"
+      "selectStation": "Wähle einen Evil-Radio Sender",
+      "volume": "Lautstärke: %s%%",
+      "scrollInfo": "Mausrad: Lautstärke ändern | Mittelklick: Play/Pause"
     },
     "notification": {
       "streamSelected": {
