Update localization files for volume control and scroll instructions
- Enhanced German and English localization files to include detailed instructions for volume adjustment and play/pause functionality using the mouse wheel and middle click.
- Improved user guidance for the Evil-Radio interface.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -13,7 +13,7 @@
       "noStationsAvailable": "Keine Sender verfügbar",
       "selectStation": "Wähle einen Evil-Radio Sender",
       "volume": "Lautstärke: %s%%",
-      "scrollInfo": "Mausrad: Lautstärke ändern | Mittelklick: Play/Pause"
+      "scrollInfo": "Mausrad ↑↓: Lautstärke ändern | Mittelklick: Play/Pause"
     },
     "notification": {
       "streamSelected": {
