Enhance `CurrentSongWidget` to conditionally display cover art based on configuration settings
- Added logic to show or hide the cover widget based on the user's HUD configuration.
- Updated localization files to correct the widget name and include a display name for the Evil Radio Widget.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -34,7 +34,8 @@
       "noStreamSelected": "Kein Sender ausgewählt"
     },
     "hudWidget": {
-      "evilraio_full_wdiget": {
+      "evilradio_full_widget": {
+        "name": "Evil Radio Widget",
         "showCover": {
           "name": "Cover anzeigen"
         }
