--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -69,6 +69,10 @@
         "name": "4 Zeilen verwenden",
         "description": "Zeige das Widget mit 4 Zeilen statt 3 an"
       },
+      "pauseOnFocusLoss": {
+        "name": "Bei Fokus-Verlust pausieren",
+        "description": "Pausiert den Stream automatisch, wenn das Minecraft-Fenster den Fokus verliert"
+      },
       "volume": {
         "name": "Lautstärke",
         "description": "Die Lautstärke des Radio-Streams (0-100%)"
