Add auto-stop feature for stream on window focus loss
- Implemented a periodic check to stop the stream automatically when the game window loses focus and resume it when focus is regained.
- Introduced a new configuration option `autoStopOnFocusLoss` to enable or disable this feature.
- Updated localization files to include descriptions for the new setting in both German and English.

--- a/core/src/main/resources/assets/evilradio/i18n/de_de.json
+++ b/core/src/main/resources/assets/evilradio/i18n/de_de.json
@@ -69,6 +69,10 @@
         "name": "4 Zeilen verwenden",
         "description": "Zeige das Widget mit 4 Zeilen statt 3 an"
       },
+      "autoStopOnFocusLoss": {
+        "name": "Auto-Stop bei Fokus-Verlust",
+        "description": "Stoppe den Stream automatisch, wenn das Spiel-Fenster den Fokus verliert"
+      },
       "volume": {
         "name": "Lautstärke",
         "description": "Die Lautstärke des Radio-Streams (0-100%)"
